--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Arimo&display=optional');
+@import url('https://fonts.googleapis.com/css?family=Cousine&display=optional');
 
 /* Layout */
 
@@ -48,6 +49,30 @@ div.body-copy {
   margin-bottom: 2rem;
 }
 
+div.code {
+  margin: 2rem 2rem 2rem 2rem;
+}
+
+div.code-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+div.code-body {
+  overflow: auto;
+}
+
+span.code {
+  margin: 0 0 0 0;
+}
+
+div.code-body pre {
+  margin: 1rem 1rem 1rem 1rem;
+  display: inline-block;  /* Preserve right-hand margin in scroll box */
+}
+
 footer {
   bottom: 0;
   padding-top: 1em;
@@ -89,4 +114,26 @@ h2.section {
 p {
   line-height: 1.45;
   color: black;
+}
+
+div.code {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #2c2c2c;
+}
+
+div.code-header {
+  color: white;
+  background-color: #2c2c2c;
+  line-height: 1.45;
+}
+
+div.code-body {
+  color: black;
+  background-color: white;
+}
+
+div.code-body pre, span.code {
+  font-family: "Liberation Mono", Cousine, monospace;
+  font-size: 11pt;
 }
