--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Arimo&display=optional');
+
 /* Layout */
 
 html {
@@ -55,7 +57,7 @@ footer {
 /* Style */
 
 body {
-  font-family: "Liberation Sans", Helvetica, Arial, sans-serif;
+  font-family: "Liberation Sans", "Arimo", Helvetica, Arial, sans-serif;
   letter-spacing: 0.0175em;
   color: #2c2c2c;
   background-color: #fffcf4;
