--- a/render/style.css
+++ b/render/style.css
@@ -30,12 +30,30 @@ header {
   padding-bottom: 2rem;
 }
 
+div.header-flexbox {
+  display: flex;
+  flex-direction: row;
+}
+
+div.header-flexbox .title-block {
+  flex-grow: 0.75;
+}
+
+div.header-flexbox .header-vr {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+div.header-flexbox .nav-block {
+  flex-grow: 0.25;
+}
+
 h1.title {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-hr.title {
+hr.title-rule {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -43,6 +61,19 @@ hr.title {
 h2.subtitle {
   margin-top: 1.25rem;
   margin-bottom: 0.25rem;
+}
+
+ul.nav-block {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul.nav-block div.nav-row {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
 }
 
 div.main-content {
@@ -100,10 +131,10 @@ header, footer {
 }
 
 h1.title {
-  font-size: 3em;
+  font-size: 3rem;
 }
 
-hr.title {
+.title-rule {
   border-style: solid;
   border-color: #fffcf4;
   border-width: 0.5px;
@@ -114,7 +145,11 @@ h2.subtitle {
 }
 
 h2.section {
-  font-size: 1.75em;
+  font-size: 1.75rem;
+}
+
+.nav-block {
+  font-size: 1.5rem;
 }
 
 p {
