Reduce nav right-padding

--- a/render/style.css
+++ b/render/style.css
@@ -36,7 +36,7 @@ div.header-flexbox {
 }
 
 div.header-flexbox .title-block {
-  flex-grow: 0.8;
+  flex-grow: 1;
 }
 
 div.header-flexbox .header-vr {
@@ -45,7 +45,7 @@ div.header-flexbox .header-vr {
 }
 
 div.header-flexbox nav {
-  flex-grow: 0.2;
+  margin-right: 1rem;
   display: flex;
 }
 
